Print tuple as vector and added optional separator.